# rs-pc-remote

./: Cargo.toml  LICENSE.md  README.md
examples/: test_keyboard.rs  test_media.rs  test_mouse.rs
src/: error.rs  lib.rs  prelude.rs
src/input/: key.rs  keyboard.rs  mod.rs  mouse.rs
src/media/: device.rs  media.rs  mod.rs
